--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                  <div id="interests">
                     <h3>Interests</h3>
                     <ul>
-                        <li>Thing 1</li>
-                        <li>Thing 2</li>
-                        <li>Thing 3</li>
+                        <li>Video Games</li>
+                        <li>One Piece</li>
+                        <li>Sleeping</li>
                     </ul>
                 </div> 
               </div>
