add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Chad's First Website</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
       <!-- Visible HTML elements GO HERE  -->
     <body>
