add portfolio.html file

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,12 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+      <link  rel="stylesheet" href="style.css" >
     <title>Chad's Giga Website</title>
     </head>
 
     <body>
-      <div id="all-contents">
+      <divid="all-contents">
     
             <nav>
                 <h1>Chad's Giga Website</h1>
