<message about commit>

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
     <head>
-        <title>Chad's First Website</title>
-        <link rel="stylesheet" href="style.css">
+        <title>Chad's Giga Website</title>
         <link rel="stylesheet" href="style.css">
     </head>
+
       <!-- Visible HTML elements GO HERE  -->
     <body>
         <!-- All content goes here -->
@@ -12,20 +12,26 @@
       <div id="all-contents">
           <nav>
             <h1>Chad's Giga Website</h1>
-            <ul id="nav-ul"><li class="nav-li"><a>Home</a></li>
-                <li class="nav-li"><a>Portfolio</a></li></ul>
-            
+            <ul id="nav-ul">
+              <li class="nav-li">
+                <a href="index.html">Home</a>
+              </li>
+                <li class="nav-li">
+                  <a href="portfolio.html">Portfolio</a>
+                </li>
+              </ul>
           </nav>
           <main>
               <!-- Sidebar section -->
         
               <div class="sidebar">
-               <img class="sidebar-img" src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3CcjSifUEoHc9csSu4VU2BcPHCLuKrKMGedial7m6fGSwSy0Cqy7aLgajvSZfbqaByTI:https://images.classmates.com/pho106/1/v/N/2/16388790_display.jpg&usqp=CAU'</img>
+               <img class="sidebar-img" src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3CcjSifUEoHc9csSu4VU2BcPHCLuKrKMGedial7m6fGSwSy0Cqy7aLgajvSZfbqaByTI:https://images.classmates.com/pho106/1/v/N/2/16388790_display.jpg&usqp=CAU">
               </div>
                 <!-- Content section -->
               <div class="content">
                  <h2>Chad Ranftle</h2>
-                 <p>Student</p>
+                 <p>Student of CHS</p>
+              </div>
                  <!-- Interests section -->
                  <div id="interests">
                     <h3>Interests</h3>
