--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-      <divid="all-contents">
+      <div id="all-contents">
     
             <nav>
                 <h1>Chad's Giga Website</h1>
@@ -20,7 +20,8 @@
                  </li>
              </ul>
          </nav>
-         <main><div class='content'>
+         <main>
+          <div class='content'>
                 <h1>Portfolio</h1>
                 <ul id="portfolio">
                   <li><a href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a></li>
@@ -29,7 +30,6 @@
             </ul>
          </main>
      </div>
-
       </div>
     </body>
 </html>
